@@ -1,6 +1,10 @@
 Changes between 2.3.5 and 2.4.DEV
 -----------------------------------
 
+- make sessionfinish hooks execute with the same cwd-context as at
+  session start (helps fix plugin behaviour which write output files 
+  with relative path such as pytest-cov)
+
 - fix issue316 - properly reference collection hooks in docs
 
 - fix issue 308 - allow to mark/xfail/skip individual parameter sets
